# Milgram

./: Makefile  bots.py  instructions.py  main.py  pyproject.toml  run_experiment.py  server.py
backend/: pyproject.toml
backend/src/: instructions.py  run_experiment.py
backend/src/chat/: custom_groupchat.py
backend/src/utils/: chat_utils.py
utils/: chat_utils.py
